src/test/data/tests/chapter_10/valid/type_before_storage_class.c
int foo(void) {
    return 3;
}

int bar = 4;

int main(void) {
    return foo() + bar;
}
